fix alignment

--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -4,7 +4,7 @@
   background: $primary;
   color: $white;
   border-bottom: 1px solid hsla(0,0%,100%,.1);
-  padding-left: 432px;
+  padding-left: 269px;
   height: 65px;
 
   .is-divider-vertical {
@@ -66,6 +66,6 @@
 
 @media only screen and (max-width: 1500px) {
   .debut-nav-bar {
-    padding-left: 255px;
+    padding-left: 125px;
   }
 }
